src/ovraudio/sys.rs

extern "C" {
    /// Sets the position of an audio source.  Use "OVR" coordinate system (same as pose).
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param X position of sound on X axis
/// \param Y position of sound on Y axis
/// \param Z position of sound on Z axis
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetListenerPoseStatef
/// \see ovrAudio_SetAudioSourceRange
///
    pub fn ovrAudio_SetAudioSourcePos(Context: ovrAudioContext,
                                      Sound: ::std::os::raw::c_int, X: f32,
                                      Y: f32, Z: f32) -> ovrResult;
}
extern "C" {
    /// Gets the position of an audio source.  Use "OVR" coordinate system (same as pose).
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param pX address of position of sound on X axis
/// \param pY address of position of sound on Y axis
/// \param pZ address of position of sound on Z axis
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetListenerPoseStatef
/// \see ovrAudio_SetAudioSourceRange
///
    pub fn ovrAudio_GetAudioSourcePos(Context: ovrAudioContext,
                                      Sound: ::std::os::raw::c_int,
                                      pX: *mut f32, pY: *mut f32,
                                      pZ: *mut f32) -> ovrResult;
}
extern "C" {
    /// Sets the min and max range of the audio source.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param RangeMin min range in meters (full gain)
/// \param RangeMax max range in meters
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetListenerPoseStatef
/// \see ovrAudio_SetAudioSourcePos
///
    pub fn ovrAudio_SetAudioSourceRange(Context: ovrAudioContext,
                                        Sound: ::std::os::raw::c_int,
                                        RangeMin: f32, RangeMax: f32)
     -> ovrResult;
}
extern "C" {
    /// Gets the min and max range of the audio source.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param pRangeMin addr of variable to receive the returned min range parameter (in meters).
/// \param pRangeMax addr of variable to receive the returned max range parameter (in meters).
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetListenerPoseStatef
/// \see ovrAudio_SetAudioSourcePos
/// \see ovrAudio_SetAudioSourceRange
///
    pub fn ovrAudio_GetAudioSourceRange(Context: ovrAudioContext,
                                        Sound: ::std::os::raw::c_int,
                                        pRangeMin: *mut f32,
                                        pRangeMax: *mut f32) -> ovrResult;
}
extern "C" {
    /// Sets the radius of the audio source for volumetric sound sources. Set a radius of 0 to make it a point source.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param Radius source radius in meters
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetListenerPoseStatef
/// \see ovrAudio_SetAudioSourcePos
///
    pub fn ovrAudio_SetAudioSourceRadius(Context: ovrAudioContext,
                                         Sound: ::std::os::raw::c_int,
                                         Radius: f32) -> ovrResult;
}
extern "C" {
    /// Gets the radius of the audio source for volumetric sound sources.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param pRadiusMin addr of variable to receive the returned radius parameter (in meters).
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetListenerPoseStatef
/// \see ovrAudio_SetAudioSourcePos
/// \see ovrAudio_SetAudioSourceRadius
///
    pub fn ovrAudio_GetAudioSourceRadius(Context: ovrAudioContext,
                                         Sound: ::std::os::raw::c_int,
                                         pRadius: *mut f32) -> ovrResult;
}
extern "C" {
    /// Sets an audio source's flags.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param Flags a logical OR of ovrAudioSourceFlag enumerants
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_SetAudioSourceFlags(Context: ovrAudioContext,
                                        Sound: ::std::os::raw::c_int,
                                        Flags: u32) -> ovrResult;
}
extern "C" {
    /// Gets an audio source's flags.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param pFlags addr of returned flags (a logical OR of ovrAudioSourceFlag enumerants)
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_GetAudioSourceFlags(Context: ovrAudioContext,
                                        Sound: ::std::os::raw::c_int,
                                        pFlags: *mut u32) -> ovrResult;
}
extern "C" {
    /// Sets the direction of an audio source.  Use "OVR" coordinate system (same as pose).
///
/// This is an experimental feature only.  Vn should be a unit vector pointing AWAY from
/// the sound source.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param VX X component of direction vector
/// \param VY Y component of direction vector
/// \param VZ Z component of direction vector
/// \param Angle Cone angle of the sound source in degrees.  A value of 0 disables directionality.
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetListenerPoseStatef
/// \see ovrAudio_SetAudioSourceRange
/// \see ovrAudio_SetAudioSourcePos
///
    pub fn ovrAudio_SetAudioSourceDirectionRESERVED(Context: ovrAudioContext,
                                                    Sound:
                                                        ::std::os::raw::c_int,
                                                    VX: f32, VY: f32, VZ: f32,
                                                    Angle: f32) -> ovrResult;
}
extern "C" {
    /// Set the attenuation mode for a sound source.
///
/// Sounds can have their volume attenuated by distance based on different methods.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param Mode attenuation mode to use
/// \param FixedScale attenuation constant used for fixed attenuation mode
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_SetAudioSourceAttenuationMode(Context: ovrAudioContext,
                                                  Sound:
                                                      ::std::os::raw::c_int,
                                                  Mode:
                                                      ovrAudioSourceAttenuationMode,
                                                  FixedScale: f32)
     -> ovrResult;
}
extern "C" {
    /// Get the attenuation mode for a sound source.
///
/// Sounds can have their volume attenuated by distance based on different methods.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \param pMode addr of returned attenuation mode in use
/// \param pFixedScale addr of returned attenuation constant used for fixed attenuation mode
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_GetAudioSourceAttenuationMode(Context: ovrAudioContext,
                                                  Sound:
                                                      ::std::os::raw::c_int,
                                                  pMode:
                                                      *mut ovrAudioSourceAttenuationMode,
                                                  pFixedScale: *mut f32)
     -> ovrResult;
}
extern "C" {
    /// Spatialize a mono audio source to interleaved stereo output.
///
/// \param Context[in] context to use
/// \param Sound[in] index of sound (0..NumSources-1)
/// \param InFlags[in] spatialization flags to apply 
/// \param OutStatus[out] bitwise OR of flags indicating status of currently playing sound
/// \param Dst[out] pointer to stereo interleaved floating point destination buffer
/// \param Src[in] pointer to mono floating point buffer to spatialize
/// \return Returns an ovrResult indicating success or failure
///
/// \see ovrAudio_SpatializeMonoSourceLR
///
    pub fn ovrAudio_SpatializeMonoSourceInterleaved(Context: ovrAudioContext,
                                                    Sound:
                                                        ::std::os::raw::c_int,
                                                    OutStatus: *mut u32,
                                                    Dst: *mut f32,
                                                    Src: *const f32)
     -> ovrResult;
}
extern "C" {
    /// Spatialize a mono audio source to separate left and right output buffers.
///
/// \param Context[in] context to use
/// \param Sound[in] index of sound (0..NumSources-1)
/// \param InFlags[in] spatialization flags to apply 
/// \param OutStatus[out] bitwise OR of flags indicating status of currently playing sound
/// \param DstLeft[out]  pointer to floating point left channel buffer
/// \param DstRight[out] pointer to floating point right channel buffer
/// \param Src[in] pointer to mono floating point buffer to spatialize
/// \return Returns an ovrResult indicating success or failure
///
/// \see ovrAudio_SpatializeMonoSourceInterleaved
///
    pub fn ovrAudio_SpatializeMonoSourceLR(Context: ovrAudioContext,
                                           Sound: ::std::os::raw::c_int,
                                           OutStatus: *mut u32,
                                           DstLeft: *mut f32,
                                           DstRight: *mut f32,
                                           Src: *const f32) -> ovrResult;
}
extern "C" {
    /// Set the headphone model used by the headphone correction algorithm.
///
/// \param Context[in] context to use
/// \param Model[in] model to use
/// \param ImpulseResponse[in] impulse response to use
/// \param NumSamples[in] size of impulse response in samples
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_ApplyHeadphoneCorrection
///
    pub fn ovrAudio_SetHeadphoneModel(Context: ovrAudioContext,
                                      Model: ovrAudioHeadphones,
                                      ImpulseResponse: *const f32,
                                      NumSamples: ::std::os::raw::c_int)
     -> ovrResult;
}
extern "C" {
    /// Get the headphone model used by the headphone correction algorithm.
///
/// \param Context[in] context to use
/// \param pModel[in] addr of returned model used
/// \param pImpulseResponse[in] addr of returned impulse response used (as a readonly buffer)
/// \param pNumSamples[in] addr of returned size of impulse response in samples
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_ApplyHeadphoneCorrection
///
    pub fn ovrAudio_GetHeadphoneModel(Context: ovrAudioContext,
                                      pModel: *mut ovrAudioHeadphones,
                                      pImpulseResponse: *mut *const f32,
                                      pNumSamples: *mut ::std::os::raw::c_int)
     -> ovrResult;
}
